--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <img src="assets/icons/search-icon.svg" height="16" />
           </button>
           <button id="location-button" aria-label="Use current location">
-            <img src="assets/icons/location-icon.svg" height="18" />
+            <img src="assets/icons/location-icon.svg" height="16" />
           </button>
         </div>
         <div class="weather-info">
@@ -82,7 +82,7 @@
         Data provided by:
         <a href="https://openweathermap.org/" target="_blank">OpenWeather</a>
         and
-        <a href="https://www.citypopulation.de/en/world/cities/" target="_blank"
+        <a href="https://www.api-ninjas.com/api/city" target="_blank"
           >City API</a
         >
       </p>
@@ -91,5 +91,7 @@
     <!-- Scripts -->
     <script type="module" src="js/utils.js"></script>
     <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/apiKeys.js"></script>
+    <script type="module" src="js/geolocation.js"></script>
   </body>
 </html>
