Refactor weather data fetching and display to include 5-day forecast and automatic theme
- Updated weather data fetching to use OpenWeather API for current weather and WeatherAPI for 5-day forecast.
- Implemented display of 5-day forecast using data from WeatherAPI, including day of the week, temperature, and weather icon.
- Added a utility function to determine the day of the week from a date string.
- Implemented automatic theme setting based on the current time of day (light during the day, dark at night).
- Modified CSS to accommodate the 5-day forecast display and adjusted styling for improved appearance.
- Removed the `content.html` file.

--- a/index.html
+++ b/index.html
@@ -89,12 +89,8 @@
             <img src="assets/icons/location-icon.svg" height="16" />
           </button>
         </div>
-        <div class="weather-container">
-          
-        </div>
-        <div id="map">
-          
-        </div>    
+        <div class="weather-container"></div>
+        <div id="map"></div>    
       </section>
     </main>
 
@@ -104,8 +100,9 @@
         Data provided by:
         <a href="https://openweathermap.org/" target="_blank">OpenWeather</a>
         ,
-        <a href="https://www.citypopulation.de/en/world/cities/" target="_blank">City API</a> and 
-        <a href="https://leafletjs.com/reference.html" target="_blank">Leaflet</a>
+        <a href="https://www.citypopulation.de/en/world/cities/" target="_blank">City API</a>,
+        <a href="https://leafletjs.com/reference.html" target="_blank">Leaflet</a>, and 
+        <a href="https://www.weatherapi.com/" target="_blank">Weather API</a"
       </p>
     </footer>
 
